--- a/src/App.css
+++ b/src/App.css
@@ -224,7 +224,7 @@
 
 .popdown-message {
   position: fixed;
-  bottom: 0;
+  bottom: -10px;
   left: 0;
   width: 100%;
   background-color: white;
@@ -259,5 +259,55 @@
   .btn-getstarted {
     display: none;
   }
+}
+
+.project_box{
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  max-width: 300px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  /* gap:10px; */
+  /* cursor: pointer; */
+  background: white;
+  justify-content: center;
+}
+
+
+.lottie-animation {
+  width: 300px;
+  height: 300px;
+}
+
+@media (min-width: 640px) {
+  .lottie-animation {
+    width: 350px;
+    height: 350px;
+  }
+}
+
+@media (min-width: 768px) {
+  .lottie-animation {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+.main-content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+    background: #F8FBFC;
+
+}
+
+.explore-button{
+    color: var(--accent-color);
+    text-decoration: none;
+    transition: 0.3s;
 }
 
