--- a/src/App.css
+++ b/src/App.css
@@ -221,6 +221,18 @@
     align-items: center;
 }
 
+.page-btn:hover {
+  box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+
+}
+
+.pricing .pricing-item:hover {
+  box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+  padding: 25px;
+        transition: box-shadow 0.3s ease;
+
+
+}
 
 .popdown-message {
   position: fixed;
@@ -454,4 +466,25 @@
   padding: 0 14px;
   cursor: pointer;
   height: 40px;
+}
+
+
+.image-wrapper {
+  border-radius: 50px;
+  width: 80%;
+  display: inline-block;
+  transition: box-shadow 0.3s ease;
+}
+
+.image-wrapper:hover {
+  box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+    padding: 25px;
+
+
+}
+
+.image-wrapper img {
+  border-radius: 50px;
+  width: 100%;
+  display: block;
 }
