--- a/src/App.css
+++ b/src/App.css
@@ -234,6 +234,24 @@
 
 }
 
+.chat-form{
+background: #f1f1f1;
+padding: 5px;
+display: flex;
+align-items: center;
+border-radius: 10px;
+justify-content: center;
+cursor: pointer;
+}
+
+.chat-form:hover {
+  box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+  /* padding: 1px; */
+        transition: box-shadow 0.3s ease;
+
+
+}
+
 .popdown-message {
   position: fixed;
   bottom: -10px;
